--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,9 +1,4 @@
-header {
-  background-image: url('https://images.unsplash.com/photo-1534050359320-02900022671e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 600px;
-  margin-top: 10px;
-  margin-bottom: 48px;
+.sidebar {
+  max-width: 240px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
