Ready to show posts

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .carousel-caption {
   text-shadow: 0 0 20px black;
+}
+
+body {
+  background-color: #bdeff1;
+}
+
+.bg-dark {
+  background-color: #142446 !important;
+}
+
+.navbar-dark {
+  color: #bdeff1 !important;
+}
+
+.selected-city {
+  color: #bdeff1;
+  background-color: #142446;
+}
+
+.bg-yellow {
+  background-color: #f4f1bb;
+}
+
+.current-city {
+  background-color: #8aa39b;
 }
